bug fixes and aligning employer headers

--- a/app/assets/stylesheets/revolution.css.scss
+++ b/app/assets/stylesheets/revolution.css.scss
@@ -1253,7 +1253,6 @@ th {
   .aboutbox {
     border-radius: 0;
   }
-  .stoney {height: 75px; display: inline; vertical-align: middle; margin-top:-5px;}
   .title { display: inline; vertical-align: middle; font-size:25px; position: relative; bottom: 3px;}
 }
 
